--- a/login.html
+++ b/login.html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
-<html lang="en" dir="Itr">
+<html lang="en" dir="ltr">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <link rel="stylesheet" href="login.css">
-  <script src="login.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="login.css">
+    <!-- <script src="login.jsx"></script> -->
 </head>
+
 <body>
-  <div align="center">
-  <form class="box" action="login.html" method="POST">
-    <h1>Login</h1>
-    <div>
-      <input type="text" name="" placeholder="Enter Username" id="Username">
-        </div>
-        <div>
-      <input type="text" name="" placeholder="Enter Password" id="Password">
-        </div>
-        <div>
-        <input type="submit" name="" value="Login" onclick="validate()">
-      
-  </form>
-</div>
+    <div align="center">
+        <form class="box" action="login.html" method="POST" onsubmit="return validate()">
+            <h1>Login</h1>
+            <div>
+                <input type="text" name="" placeholder="Enter Username" id="Username">
+            </div>
+            <div>
+                <input type="password" name="" placeholder="Enter Password" id="Password">
+            </div>
+            <div>
+                <input type="submit" name="" value="Login">
+            </div>
+        </form>
+    </div>
+
+    <script>
+        function validate() {
+            var username = document.getElementById("Username").value;
+            var password = document.getElementById("Password").value;
+
+            if (username === "admin" && password === "user") {
+                alert("Login successful");
+                
+                return true; // Form will be submitted
+            } else {
+                alert("Login failed");
+                return false; // Form will not be submitted
+            }
+        }
+    </script>
 </body>
+
 </html>
