--- a/login.html
+++ b/login.html
@@ -30,9 +30,9 @@
             var username = document.getElementById("Username").value;
             var password = document.getElementById("Password").value;
 
-            if (username === "admin" && password === "user") {
+            if (username === "217R1A67C6" && password === "217R1A67C6") {
                 alert("Login successful");
-                
+                window.open(href ="https://cmrtc.ac.in/");
                 return true; // Form will be submitted
             } else {
                 alert("Login failed");
