--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
             var username = document.getElementById("Username").value;
             var password = document.getElementById("Password").value;
 
-            if (username === "217R1A67C6" && password === "217R1A67C6") {
+            if (username === "217R1A67C6" && password === "GUNALI") {
                 alert("Login successful");
                 window.open(href ="https://cmrtc.ac.in/");
                 return true; // Form will be submitted
