--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
         }
         function resetForm() {
             document.getElementById("username").value = "";
-            document.getElementById("password").value = ""
+            document.getElementById("password").value = "";
         }
     </script>
 </body>
